# cmmc-control-validator

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/compliant/: main.tf
examples/non-compliant/: main.tf
src/cmmc_validator/: __init__.py  cli.py
src/cmmc_validator/checks/: __init__.py  access_control.py  identification_auth.py  system_comm.py  system_integrity.py
src/cmmc_validator/controls/: __init__.py  cmmc_l2.py  control_families.py  nist_800_171.py
src/cmmc_validator/core/: __init__.py  control_mapper.py  findings.py  terraform_parser.py
src/cmmc_validator/data/: cmmc_l2_practices.json  control_to_aws_mapping.json
src/cmmc_validator/reporters/: __init__.py  gap_report.py  poam_generator.py
tests/: __init__.py  conftest.py  test_cli.py  test_control_mapper.py  test_findings.py  test_terraform_parser.py
